fix UI issue in about component to decrease max size of photo so it doe not get too big on larger screens and looks more consistent with the other elements of the page design

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -14,7 +14,7 @@
 }
 
 .about_me {
-    max-width: 700px; /* to stop container from growing too big with responsive UI */
+    max-width: 600px; /* to stop container from growing too big with responsive UI */
     border-radius: 2rem;
     background: linear-gradient(
         45deg,
